--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   provider: ^6.1.2
   top_snackbar_flutter: ^3.1.0
   flutter_image_compress: ^2.1.0
-
+  flutter_secure_storage: ^9.0.0
+  file_selector: ^1.0.0
 
 dev_dependencies:
   flutter_test:
