--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-
+    - assets/default_profile.jpg
 flutter_icons:
   android: true
   ios: true
